--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>YOUR NAME</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://img-16.stickers.cloud/packs/f7565fbf-0efe-4252-8caf-1018d9eff75d/webp/0124b8aa-7912-4330-88a5-5c3c0fb55e03.webp" />
 </body>
  
 </html>
