--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
  
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
+  <h1>Chigen!</h1>
+  <p>Cuddlsh Concoction!</p>
   <img src="https://img-16.stickers.cloud/packs/f7565fbf-0efe-4252-8caf-1018d9eff75d/webp/0124b8aa-7912-4330-88a5-5c3c0fb55e03.webp" />
 </body>
  
